LoadBalancer/bp-webapp-green-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-live
spec:
  type: ExternalName
  externalName: bpfesvc.green.svc.cluster.local
  ports:
    - port: 32137
