LoadBalancer/bp-webapp-main-service.yaml
#kind: Service
#apiVersion: v1
#metadata:
#  name: service-live
#spec:
#  type: ExternalName
#  externalName: bpfesvc.blue.svc.cluster.local
#  ports:
#    - port: 32137
apiVersion: v1
kind: Service
metadata:
  # The unique Service instance/name
  name: bpfesvc
spec:
  # Add external load balancer
  # *Only supported by some cloud providers*
  type: LoadBalancer
  # type: ClusterIP
  ports:
    - name: http
      port: 32137
      targetPort: 32137
  selector:
    # Loadbalance traffic across Pods matching
    # this label selector
    app: bpfeapp
