LoadBalancer/ingress-loadbalancer-live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bp-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: bpfesvc
                port:
                  number: 32137
